name:                tenable-securitycenter
version:             0.1.0.0
synopsis:            Tenable SecurityCenter REST API Client
description:         Please see README.md
homepage:            https://github.com/AlainODea-haskell/tenable-securitycenter#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Alain O''Dea
maintainer:          alain.odea@gmail.com
copyright:           2016, Alain O''Dea
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Tenable.SecurityCenter.Client
                     , Network.Tenable.SecurityCenter.Types
                     , Network.Tenable.SecurityCenter.Token
                     , Network.Tenable.SecurityCenter.Asset
                     , Network.Tenable.SecurityCenter.Scan
  build-depends:       aeson
                     , base
                     , bytestring
                     , connection
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , resourcet
                     , text
                     , yaml
  default-language:    Haskell2010

executable tenable-securitycenter-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base
                     , bytestring
                     , connection
                     , http-client-tls
                     , http-conduit
                     , iso8601-time
                     , tenable-securitycenter
                     , text
                     , time
                     , uuid
  default-language:    Haskell2010

test-suite tenable-securitycenter-test
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , hspec
                     , tenable-securitycenter
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AlainODea-haskell/tenable-securitycenter
